[tool.poetry]
name = "cozychat"
version = "0.3.0"
description = "Requirements for running and checking Cozychat"
authors = ["Daniil Lysukhin <@lysukhin>"]

[tool.poetry.dependencies]
# https://python-poetry.org/docs/dependency-specification/
# https://endoflife.date/python
python = "^3.10"
jupyterlab = "^4.3.4"
nbconvert = { version = "^7.16.4", extras = ["webpdf"] }
tqdm = "^4.67.1"
pandas = "^2.2.3"
lxml = "^5.3.0"
seaborn = "^0.13.2"
wordcloud = "^1.9.4"
razdel = "^0.5.0"
stop-words = "^2018.7.23"
python-obscene-words-filter = "^0.1.6"
dostoevsky = "^0.6.0"
#fasttext = "^0.9.3"
# https://github.com/facebookresearch/fastText
# https://numpy.org/devdocs/numpy_2_0_migration_guide.html#adapting-to-changes-in-the-copy-keyword
fasttext = { git = "https://github.com/gpchelkin/fastText", branch = "gpchelkin-cozychat-fix" }
scipy = "^1.14.1"
img2pdf = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
